--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     - weblate-cache:/app/cache
     env_file:
     - ./environment
+    - ./stack.env
+    ports:
+      - 8880:8080
     restart: always
     depends_on:
     - database
@@ -15,6 +18,7 @@ services:
     image: postgres:15-alpine
     env_file:
     - ./environment
+    - ./stack.env
     volumes:
     - postgres-data:/var/lib/postgresql/data
     restart: always
